resultsmodel: Read plasma settings for KRunner favorites

This ensures all users of milout have the settings respected.
In case of an explicit assignment, we do not use the automatically read value.
Using the RESET property, one can revert to the automatic behavior.

BUG: 480750