lib/resultsmodel.cpp
@@ -8,9 +8,27 @@
 
 using namespace Milou;
 
+using namespace Qt::StringLiterals;
+
 ResultsModel::ResultsModel(QObject *parent)
     : KRunner::ResultsModel(parent)
 {
+    const auto config = KSharedConfig::openConfig(u"krunnerrc"_s);
+    m_configWatcher = KConfigWatcher::create(config);
+    const auto assignFavoriteIds = [this, config]() {
+        const KConfigGroup grp = config->group(u"General"_s).parent().group(u"Plugins"_s).group(u"Favorites"_s);
+        m_configFavoriteIds = grp.readEntry("plugins", QStringList(u"krunner_services"_s));
+        if (!m_favoritesExplicitlySet) {
+            KRunner::ResultsModel::setFavoriteIds(m_configFavoriteIds);
+        }
+    };
+    connect(m_configWatcher.data(), &KConfigWatcher::configChanged, this, [assignFavoriteIds](const KConfigGroup &group) {
+        const QLatin1String pluginsGrp("Plugins");
+        if (group.name() == QLatin1String("Favorites") && group.parent().name() == pluginsGrp) {
+            assignFavoriteIds();
+        }
+    });
+    assignFavoriteIds();
 }
 
-ResultsModel::~ResultsModel() = default;
+#include "moc_resultsmodel.cpp"
